--- a/index.html
+++ b/index.html
@@ -195,15 +195,26 @@
       padding: 0;
       min-height: 0;
     }
+    
+    /* MODIFIED: Add scrolling to panel content */
     .panel-content {
       display: flex; flex-direction: column; gap: var(--gap-layout);
       margin: 0 auto; width: 100%; height: 100%; min-height: 0;
-      overflow: hidden;
+      overflow-y: auto; /* Enable vertical scroll */
+      overflow-x: hidden;
+      -webkit-overflow-scrolling: touch; /* Smooth scroll on iOS */
       padding-bottom: calc(var(--tab-h) + env(safe-area-inset-bottom) + 12px);
     }
 
     /* --- LAYOUT 70:30 SPLIT FOR GLUE DASHBOARD --- */
-    .glue-dashboard { display:flex; flex-direction:column; height:100%; background:#0f172a; overflow:hidden; width:100%; }
+    /* Ensure Glue Dashboard takes full height of scrollable parent */
+    .glue-dashboard { 
+        display:flex; flex-direction:column; 
+        height:100%; min-height: 400px; /* Safe min-height */
+        background:#0f172a; 
+        overflow:hidden; 
+        width:100%; 
+    }
     
     .glue-body-split { 
         flex: 1; 
@@ -781,6 +792,10 @@
         document.getElementById('panel-gluegap').style.display = 'flex';
         resetSheetUI();
       }
+
+      // Reset scroll position on tab switch
+      const pc = document.querySelector('.panel-content');
+      if(pc) pc.scrollTop = 0;
 
       applyAutoFitLayout();
       lucide.createIcons();
