--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover"
   />
   <title>PackEx</title>
-
+<link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon-180.png?v=2" />
+<meta name="apple-mobile-web-app-capable" content="yes" />
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
   <link rel="icon" type="image/png" href="./logo.png" />
   <meta name="theme-color" content="#020617" />
 
