--- a/index.html
+++ b/index.html
@@ -7,10 +7,19 @@
     content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover"
   />
   <title>PackEx</title>
-<link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon-180.png?v=2" />
-<meta name="apple-mobile-web-app-capable" content="yes" />
-<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-  <link rel="icon" type="image/png" href="./logo.png" />
+
+<link rel="icon" type="image/png" sizes="32x32" href="/PackExMobility/favicon-32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/PackExMobility/favicon-16.png">
+
+<!-- iPhone Add to Home Screen (ตัวหลัก) -->
+<link rel="apple-touch-icon" sizes="180x180" href="/PackExMobility/icon-180.png">
+<link rel="apple-touch-icon" sizes="167x167" href="/PackExMobility/icon-167.png">
+<link rel="apple-touch-icon" sizes="152x152" href="/PackExMobility/icon-152.png">
+<link rel="apple-touch-icon" sizes="120x120" href="/PackExMobility/icon-120.png">
+
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+<meta name="theme-color" content="#020617">
   <meta name="theme-color" content="#020617" />
 
   <link
